# stratego

./: .gitignore  CMakeLists.txt
include/core/: Board.h  CombatResult.h  Enums.h  GameConfig.h  GameController.h  GameFactory.h  GameState.h  IGameController.h  IGameFactory.h  Move.h  PieceType.h  Player.h  Position.h  Square.h  Tile.h  Unit.h  UnitRank.h
include/rules/: ICombatStrategy.h  IHistoryManager.h  IMovementStrategy.h  IRulesEngine.h  MinerCombatStrategy.h  NoMovementStrategy.h  RulesEngine.h  ScoutMovementStrategy.h  SpyCombatStrategy.h  StandardCombatStrategy.h  StandardMovementStrategy.h
include/ui/: ISDL2UI.h  SDL2UIController.h  SDL_UnitRect.h  Texture.h
include/util/: HistoryManager.h  UnitFactory.h
source/: CMakeLists.txt  main.cpp
source/core/: Board.cpp  GameConfig.cpp  GameController.cpp  GameFactory.cpp  GameState.cpp  Move.cpp  PieceType.cpp  Player.cpp  Position.cpp  Square.cpp  Tile.cpp  Unit.cpp
source/rules/: IMovementStrategy.cpp  MinerCombatStrategy.cpp  NoMovementStrategy.cpp  RulesEngine.cpp  ScoutMovementStrategy.cpp  SpyCombatStrategy.cpp  StandardCombatStrategy.cpp  StandardMovementStrategy.cpp
source/ui/: SDL2UIController.cpp  Texture.cpp
source/util/: HistoryManager.cpp  UnitFactory.cpp
